[gd_scene load_steps=53 format=3 uid="uid://ncb3dti6kpdw"]

[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr.gd" id="1_f7rwo"]
[ext_resource type="Texture2D" uid="uid://dd7v2obosbvla" path="res://Entities/Enemies/Draugr/Draugr Assets/Back Axe Raise.png" id="2_snqka"]
[ext_resource type="Texture2D" uid="uid://bat4ibt75imql" path="res://Entities/Enemies/Draugr/Draugr Assets/Back Axe Swing.png" id="3_kyhwr"]
[ext_resource type="Texture2D" uid="uid://ckmnibik2fjm5" path="res://Entities/Enemies/Draugr/Draugr Assets/Back Left Step.png" id="4_ihljm"]
[ext_resource type="Texture2D" uid="uid://dhp2btj5o530i" path="res://Entities/Enemies/Draugr/Draugr Assets/Back Right Step.png" id="5_epque"]
[ext_resource type="Texture2D" uid="uid://bebrlhp8djn3o" path="res://Entities/Enemies/Draugr/Draugr Assets/Back Standing.png" id="6_vp8hj"]
[ext_resource type="Texture2D" uid="uid://crs1nf0bf4usg" path="res://Entities/Enemies/Draugr/Draugr Assets/Front Axe Raise.png" id="7_wpkb7"]
[ext_resource type="Texture2D" uid="uid://8ynvbfu6rsst" path="res://Entities/Enemies/Draugr/Draugr Assets/Front Axe Swing.png" id="8_pmvwn"]
[ext_resource type="Texture2D" uid="uid://cvg3qehmbne0e" path="res://Entities/Enemies/Draugr/Draugr Assets/Front Left Step.png" id="9_e8llb"]
[ext_resource type="Texture2D" uid="uid://kyclw5o27tbt" path="res://Entities/Enemies/Draugr/Draugr Assets/Front Right Step.png" id="10_ey1rf"]
[ext_resource type="Texture2D" uid="uid://dnayeom4p225p" path="res://Entities/Enemies/Draugr/Draugr Assets/Front Standing.png" id="11_3f7ss"]
[ext_resource type="Texture2D" uid="uid://bjcokepw1duvt" path="res://Entities/Enemies/Draugr/Draugr Assets/Side Axe Raise.png" id="12_b2f3w"]
[ext_resource type="Texture2D" uid="uid://w3jmijyca8cp" path="res://Entities/Enemies/Draugr/Draugr Assets/Side Axe Swing.png" id="13_vs1f1"]
[ext_resource type="Texture2D" uid="uid://pbe8fghtepv0" path="res://Entities/Enemies/Draugr/Draugr Assets/Side Left Step.png" id="14_l3scq"]
[ext_resource type="Texture2D" uid="uid://dbumomae1r285" path="res://Entities/Enemies/Draugr/Draugr Assets/Side Right Step.png" id="15_w8cxj"]
[ext_resource type="Texture2D" uid="uid://84605ll6gn3l" path="res://Entities/Enemies/Draugr/Draugr Assets/Side Standing.png" id="16_rflxa"]
[ext_resource type="Script" path="res://Components/RaycastComponent/raycast_component.gd" id="17_btm3n"]
[ext_resource type="PackedScene" uid="uid://ce05576vppq3r" path="res://Entities/Enemies/HitEffect/particles.tscn" id="18_dqg3u"]
[ext_resource type="Script" path="res://Components/PatrolAreaComponent/patrol_area_component.gd" id="19_aw3ms"]
[ext_resource type="Script" path="res://Components/Hurtbox/hurtbox.gd" id="20_u32vd"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_interactions.gd" id="21_t3wtk"]
[ext_resource type="Script" path="res://Components/Hitbox/hitbox.gd" id="22_fjghd"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_machine.gd" id="23_l60bh"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_patrol.gd" id="24_hbs7b"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_alert.gd" id="25_mtag8"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_attack.gd" id="26_o5wf2"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_chase.gd" id="27_5d5mv"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_dash_attack.gd" id="28_1rw3p"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_idle.gd" id="29_1bdtv"]
[ext_resource type="Script" path="res://Entities/Enemies/Draugr/Ice Draugr/ice_draugr_state_stagger.gd" id="30_h3md1"]
[ext_resource type="Script" path="res://Components/StatComponents/HealthComponent/health_component.gd" id="30_ipx65"]
[ext_resource type="Script" path="res://Components/StatComponents/SpeedComponent/speed_component.gd" id="31_cullv"]
[ext_resource type="PackedScene" uid="uid://ctggdjf3a5tsq" path="res://Entities/Enemies/HealthBar/health_bar_component.tscn" id="32_0de70"]

[sub_resource type="SpriteFrames" id="SpriteFrames_isbi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_snqka")
}, {
"duration": 1.0,
"texture": ExtResource("3_kyhwr")
}, {
"duration": 1.0,
"texture": ExtResource("4_ihljm")
}, {
"duration": 1.0,
"texture": ExtResource("5_epque")
}, {
"duration": 1.0,
"texture": ExtResource("6_vp8hj")
}, {
"duration": 1.0,
"texture": ExtResource("7_wpkb7")
}, {
"duration": 1.0,
"texture": ExtResource("8_pmvwn")
}, {
"duration": 1.0,
"texture": ExtResource("9_e8llb")
}, {
"duration": 1.0,
"texture": ExtResource("10_ey1rf")
}, {
"duration": 1.0,
"texture": ExtResource("11_3f7ss")
}, {
"duration": 1.0,
"texture": ExtResource("12_b2f3w")
}, {
"duration": 1.0,
"texture": ExtResource("13_vs1f1")
}, {
"duration": 1.0,
"texture": ExtResource("14_l3scq")
}, {
"duration": 1.0,
"texture": ExtResource("15_w8cxj")
}, {
"duration": 1.0,
"texture": ExtResource("16_rflxa")
}],
"loop": true,
"name": &"sprite_frames",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eb40j"]
radius = 31.0
height = 100.0

[sub_resource type="Animation" id="Animation_hp1ad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Interactions/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ynyh0"]
resource_name = "attack_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Interactions/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_vogda"]
resource_name = "attack_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Interactions/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_flw7q"]
resource_name = "attack_right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Interactions/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hs26q"]
resource_name = "attack_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Interactions/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_a8ocb"]
resource_name = "idle_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_xikh7"]
resource_name = "idle_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mddby"]
resource_name = "idle_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t5xay"]
resource_name = "idle_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_roao1"]
resource_name = "move_down"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 7, 9, 8]
}

[sub_resource type="Animation" id="Animation_rirto"]
resource_name = "move_left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 13, 14, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_52kel"]
resource_name = "move_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 13, 14, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_r8un8"]
resource_name = "move_up"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 3, 4, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnk26"]
_data = {
"RESET": SubResource("Animation_hp1ad"),
"attack_down": SubResource("Animation_ynyh0"),
"attack_left": SubResource("Animation_vogda"),
"attack_right": SubResource("Animation_flw7q"),
"attack_up": SubResource("Animation_hs26q"),
"idle_down": SubResource("Animation_a8ocb"),
"idle_left": SubResource("Animation_xikh7"),
"idle_right": SubResource("Animation_mddby"),
"idle_up": SubResource("Animation_t5xay"),
"move_down": SubResource("Animation_roao1"),
"move_left": SubResource("Animation_rirto"),
"move_right": SubResource("Animation_52kel"),
"move_up": SubResource("Animation_r8un8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4pwm4"]
radius = 224.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ctneo"]
radius = 35.0
height = 106.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lcqk"]
size = Vector2(60.5, 61)

[node name="IceDraugr" type="CharacterBody2D"]
z_index = -1
script = ExtResource("1_f7rwo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -1)
scale = Vector2(0.0994792, 0.0994792)
sprite_frames = SubResource("SpriteFrames_isbi8")
animation = &"sprite_frames"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 5)
shape = SubResource("CapsuleShape2D_eb40j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xnk26")
}

[node name="RaycastComponent" type="RayCast2D" parent="."]
target_position = Vector2(0, 250)
collision_mask = 7
script = ExtResource("17_btm3n")

[node name="Particles" parent="." instance=ExtResource("18_dqg3u")]

[node name="PatrolAreaComponent" type="Area2D" parent="."]
script = ExtResource("19_aw3ms")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatrolAreaComponent"]
shape = SubResource("CircleShape2D_4pwm4")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "owner_node")]
collision_layer = 0
collision_mask = 2
script = ExtResource("20_u32vd")
health_component = NodePath("../HealthComponent")
owner_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-2, 5)
shape = SubResource("CapsuleShape2D_ctneo")

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("21_t3wtk")

[node name="Hitbox" type="Area2D" parent="Interactions"]
collision_layer = 4
collision_mask = 4
script = ExtResource("22_fjghd")
damage = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/Hitbox"]
position = Vector2(80, -1)
shape = SubResource("RectangleShape2D_8lcqk")
disabled = true

[node name="IceDraugrStateMachine" type="Node" parent="."]
script = ExtResource("23_l60bh")

[node name="IceDraugrStatePatrol" type="Node" parent="IceDraugrStateMachine" node_paths=PackedStringArray("speed_component")]
script = ExtResource("24_hbs7b")
speed_component = NodePath("../../SpeedComponent")

[node name="IceDraugrStateAlert" type="Node" parent="IceDraugrStateMachine"]
script = ExtResource("25_mtag8")

[node name="IceDraugrStateAttack" type="Node" parent="IceDraugrStateMachine"]
script = ExtResource("26_o5wf2")

[node name="IceDraugrStateChase" type="Node" parent="IceDraugrStateMachine" node_paths=PackedStringArray("speed_component")]
script = ExtResource("27_5d5mv")
speed_component = NodePath("../../SpeedComponent")

[node name="IceDraugrStateDashAttack" type="Node" parent="IceDraugrStateMachine"]
script = ExtResource("28_1rw3p")

[node name="IceDraugrStateIdle" type="Node" parent="IceDraugrStateMachine"]
script = ExtResource("29_1bdtv")

[node name="IceDraugrStateStagger" type="Node" parent="IceDraugrStateMachine"]
script = ExtResource("30_h3md1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("30_ipx65")
max_health = 50.0

[node name="SpeedComponent" type="Node" parent="."]
script = ExtResource("31_cullv")
speed = 100.0

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("32_0de70")]
health_component = NodePath("../HealthComponent")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Interactions/Hitbox" to="Interactions/Hitbox" method="_on_body_entered"]
[connection signal="hit" from="Interactions/Hitbox" to="IceDraugrStateMachine/IceDraugrStateAttack" method="_on_hitbox_hit"]
[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="t_damage" from="HealthComponent" to="." method="_on_health_component_t_damage"]
